After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796384 - qtdemux: fix computation of first_duration for fragmented files in push mode
qtdemux: fix computation of first_duration for fragmented files in push mode
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-05-24 11:08 UTC by Alicia Boya García
Modified: 2018-05-24 13:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: fix computation of first_duration for fragmented files in push mode (3.64 KB, patch)
2018-05-24 11:08 UTC, Alicia Boya García
committed Details | Review

Description Alicia Boya García 2018-05-24 11:08:47 UTC
Since ca068865c391e87932b1268d0c675be233dd2ffe the duration of the first
frame is not used for estimating the frame rate.

For this purpose, stream->first_duration was initialized with the
duration of the first frame. In fragmented files, this was previously
done by peeking the first moof, but that can only be done in pull mode.

Fortunately, we don't really need to do that, at least with the current
design: When we are estimating the frame rate we already have the
sample table, regardless of the scheduling mode and whether the file is
fragmented or not, so we can obtain first_duration there much more
reliably.

This fixes frame rate estimation for fragmented files in push mode.
Comment 1 Alicia Boya García 2018-05-24 11:08:52 UTC
Created attachment 372382 [details] [review]
qtdemux: fix computation of first_duration for fragmented files in push mode
Comment 2 Thibault Saunier 2018-05-24 13:54:40 UTC
Attachment 372382 [details] pushed as 5388d6e - qtdemux: fix computation of first_duration for fragmented files in push mode